// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> snapshot should render the same 1`] = `
"Snapshot Diff:
 Compared values have no visual difference."
`;

exports[`<RadioGroup /> snapshot should render the same, with <RadioGroup.Button /> 1`] = `
"Snapshot Diff:
 - Expected
+ Received

  <div
    className=\\"FieldGroup-sc-18uoi37-0 RadioGroup__Group-sc-1l7wvp0-0 fJKEVN\\"
    role=\\"radiogroup\\"
  >
    <div
      className=\\"RadioButton__Wrapper-sc-1q7g63p-2 lTHhg\\"
    >
      <label
        checked={false}
        className=\\"RadioButton-sc-1q7g63p-3 qJiHq Button__StyledButton-sc-1ovnfsw-1 gsGCuq\\"
        disabled={false}
-       htmlFor=\\"radio-button-9\\"
+       htmlFor=\\"radio-button-12\\"
        onClick={[Function onClick]}
        size=\\"medium\\"
        type=\\"button\\"
      >
        
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 cKmnJs\\"
          disabled={false}
-         id=\\"radio-button-9\\"
+         id=\\"radio-button-12\\"
          name=\\"foo\\"
          onChange={[Function onChange]}
          type=\\"radio\\"
          value=\\"Foo\\"
        />
        Foo
      </label>
    </div>
    <div
      className=\\"RadioButton__Wrapper-sc-1q7g63p-2 lTHhg\\"
    >
      <label
        checked={false}
        className=\\"RadioButton-sc-1q7g63p-3 qJiHq Button__StyledButton-sc-1ovnfsw-1 gsGCuq\\"
        disabled={false}
-       htmlFor=\\"radio-button-10\\"
+       htmlFor=\\"radio-button-13\\"
        onClick={[Function onClick]}
        size=\\"medium\\"
        type=\\"button\\"
      >
        
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 cKmnJs\\"
          disabled={false}
-         id=\\"radio-button-10\\"
+         id=\\"radio-button-13\\"
          name=\\"foo\\"
          onChange={[Function onChange]}
          type=\\"radio\\"
          value=\\"Bar\\"
        />
        Bar
      </label>
    </div>
    <div
      className=\\"RadioButton__Wrapper-sc-1q7g63p-2 lTHhg\\"
    >
      <label
        checked={false}
        className=\\"RadioButton-sc-1q7g63p-3 qJiHq Button__StyledButton-sc-1ovnfsw-1 gsGCuq\\"
        disabled={false}
-       htmlFor=\\"radio-button-11\\"
+       htmlFor=\\"radio-button-14\\"
        onClick={[Function onClick]}
        size=\\"medium\\"
        type=\\"button\\"
      >
        
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 cKmnJs\\"
          disabled={false}
-         id=\\"radio-button-11\\"
+         id=\\"radio-button-14\\"
          name=\\"foo\\"
          onChange={[Function onChange]}
          type=\\"radio\\"
          value=\\"Baz\\"
        />
        Baz
      </label>
    </div>
  </div>"
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Button /> 1`] = `
.c4 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c5 .c3:checked ~ .c6 {
  border-color: #1250C4;
}

.c5 .c3:checked ~ .c6:after {
  background-color: #1250C4;
  display: block;
}

.c5 .c3:focus ~ .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c5 .c3:checked:disabled ~ .c6 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 8px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #ffffff;
  color: #1250C4;
  border: 2px solid #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c2:hover {
  box-shadow: 0px 2px 4px -1px rgba(0,47,123,0.2),0px 4px 5px 0px rgba(0,47,123,0.14),0px 1px 10px 0px rgba(0,47,123,0.12);
  background-color: #E5EDFC;
  border-color: #002F7B;
}

.c2:focus,
.c2:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(18,80,196,0.2),0px 4px 5px 0px rgba(18,80,196,0.14),0px 1px 10px 0px rgba(18,80,196,0.12);
}

.c2:active {
  box-shadow: 0px 5px 5px -3px rgba(0,47,123,0.2),0px 8px 10px 1px rgba(0,47,123,0.14),0px 3px 14px 2px rgba(0,47,123,0.12);
  background-color: #E5EDFC;
}

.c2 .c7 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c2 .c7 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c1 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
  role="radiogroup"
>
  <div
    className=""
  >
    <label
      checked={false}
      className="c1 c2"
      disabled={false}
      htmlFor="radio-button-3"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id="radio-button-3"
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c1 c2"
      disabled={false}
      htmlFor="radio-button-4"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id="radio-button-4"
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c1 c2"
      disabled={false}
      htmlFor="radio-button-5"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id="radio-button-5"
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Button /> inline 1`] = `
.c5 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c6 .c4:checked ~ .c7 {
  border-color: #1250C4;
}

.c6 .c4:checked ~ .c7:after {
  background-color: #1250C4;
  display: block;
}

.c6 .c4:focus ~ .c7 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c6 .c4:checked:disabled ~ .c7 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 8px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #ffffff;
  color: #1250C4;
  border: 2px solid #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(0,47,123,0.2),0px 4px 5px 0px rgba(0,47,123,0.14),0px 1px 10px 0px rgba(0,47,123,0.12);
  background-color: #E5EDFC;
  border-color: #002F7B;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(18,80,196,0.2),0px 4px 5px 0px rgba(18,80,196,0.14),0px 1px 10px 0px rgba(18,80,196,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(0,47,123,0.2),0px 8px 10px 1px rgba(0,47,123,0.14),0px 3px 14px 2px rgba(0,47,123,0.12);
  background-color: #E5EDFC;
}

.c3 .c8 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c3 .c8 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c1 {
  display: inline-block;
  margin-right: 16px;
  vertical-align: top;
}

.c1:last-child {
  margin-right: 0;
}

.c1 .c9 {
  font-size: 16px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
  role="radiogroup"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="radio-button-6"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4 c5"
        disabled={false}
        id="radio-button-6"
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="radio-button-7"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4 c5"
        disabled={false}
        id="radio-button-7"
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="radio-button-8"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4 c5"
        disabled={false}
        id="radio-button-8"
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Radio /> 1`] = `
.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c5 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  position: relative;
  top: 4px;
  width: 16px;
  background-color: #ffffff;
  border: 1.5px solid #999999;
  margin-right: 4px;
}

.c5:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 50%;
  left: 25%;
  position: absolute;
  top: 25%;
  width: 50%;
  background-color: #1250C4;
}

.c1 {
  display: block;
  margin-bottom: 5px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .c2:checked ~ .c4 {
  border-color: #1250C4;
}

.c1 .c2:checked ~ .c4:after {
  background-color: #1250C4;
  display: block;
}

.c1 .c2:focus ~ .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1:hover .c4,
.c1:focus .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 .c2:checked:disabled ~ .c4 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
  role="radiogroup"
>
  <label
    className="c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      type="radio"
      value="Foo"
    />
    <span
      className="c4 c5"
    />
    Foo
  </label>
  <label
    className="c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      type="radio"
      value="Bar"
    />
    <span
      className="c4 c5"
    />
    Bar
  </label>
  <label
    className="c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      type="radio"
      value="Baz"
    />
    <span
      className="c4 c5"
    />
    Baz
  </label>
</div>
`;

exports[`<RadioGroup /> snapshot simple with button options 1`] = `
.c4 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c5 .c3:checked ~ .c6 {
  border-color: #1250C4;
}

.c5 .c3:checked ~ .c6:after {
  background-color: #1250C4;
  display: block;
}

.c5 .c3:focus ~ .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c5 .c3:checked:disabled ~ .c6 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 8px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #ffffff;
  color: #1250C4;
  border: 2px solid #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c2:hover {
  box-shadow: 0px 2px 4px -1px rgba(0,47,123,0.2),0px 4px 5px 0px rgba(0,47,123,0.14),0px 1px 10px 0px rgba(0,47,123,0.12);
  background-color: #E5EDFC;
  border-color: #002F7B;
}

.c2:focus,
.c2:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(18,80,196,0.2),0px 4px 5px 0px rgba(18,80,196,0.14),0px 1px 10px 0px rgba(18,80,196,0.12);
}

.c2:active {
  box-shadow: 0px 5px 5px -3px rgba(0,47,123,0.2),0px 8px 10px 1px rgba(0,47,123,0.14),0px 3px 14px 2px rgba(0,47,123,0.12);
  background-color: #E5EDFC;
}

.c2 .c7 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c2 .c7 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c1 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
  role="radiogroup"
>
  <div
    className=""
  >
    <label
      checked={false}
      className="c1 c2"
      disabled={false}
      htmlFor="radio-button-0"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id="radio-button-0"
        name="foo"
        onChange={[Function]}
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c1 c2"
      disabled={false}
      htmlFor="radio-button-1"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id="radio-button-1"
        name="foo"
        onChange={[Function]}
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c1 c2"
      disabled={false}
      htmlFor="radio-button-2"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c3 c4"
        disabled={false}
        id="radio-button-2"
        name="foo"
        onChange={[Function]}
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with options 1`] = `
.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c5 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  position: relative;
  top: 4px;
  width: 16px;
  background-color: #ffffff;
  border: 1.5px solid #999999;
  margin-right: 4px;
}

.c5:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 50%;
  left: 25%;
  position: absolute;
  top: 25%;
  width: 50%;
  background-color: #1250C4;
}

.c1 {
  display: block;
  margin-bottom: 5px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .c2:checked ~ .c4 {
  border-color: #1250C4;
}

.c1 .c2:checked ~ .c4:after {
  background-color: #1250C4;
  display: block;
}

.c1 .c2:focus ~ .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1:hover .c4,
.c1:focus .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 .c2:checked:disabled ~ .c4 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
  role="radiogroup"
>
  <label
    className="c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="foo"
      onChange={[Function]}
      type="radio"
      value="Foo"
    />
    <span
      className="c4 c5"
    />
    Foo
  </label>
  <label
    className="c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="foo"
      onChange={[Function]}
      type="radio"
      value="Bar"
    />
    <span
      className="c4 c5"
    />
    Bar
  </label>
  <label
    className="c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="foo"
      onChange={[Function]}
      type="radio"
      value="Baz"
    />
    <span
      className="c4 c5"
    />
    Baz
  </label>
</div>
`;

exports[`<RadioGroup /> snapshot with an error 1`] = `
.c6 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c5 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  position: relative;
  top: 4px;
  width: 16px;
  background-color: #ffffff;
  border: 1.5px solid #999999;
  margin-right: 4px;
}

.c5:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 50%;
  left: 25%;
  position: absolute;
  top: 25%;
  width: 50%;
  background-color: #1250C4;
}

.c7 .c2:checked ~ .c4 {
  border-color: #1250C4;
}

.c7 .c2:checked ~ .c4:after {
  background-color: #1250C4;
  display: block;
}

.c7 .c2:focus ~ .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c7:hover .c4,
.c7:focus .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c7 .c2:checked:disabled ~ .c4 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c1 {
  display: block;
  margin-bottom: 5px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .c2:checked ~ .c4 {
  border-color: #1250C4;
}

.c1 .c2:checked ~ .c4:after {
  background-color: #1250C4;
  display: block;
}

.c1 .c2:focus ~ .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1:hover .c4,
.c1:focus .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 .c2:checked ~ .c4 {
  border-color: #ec584e;
}

.c1 .c2:checked ~ .c4:after {
  background-color: #ec584e;
  display: block;
}

.c1 .c2:focus ~ .c4 {
  border-color: #ec584e;
  box-shadow: 0px 3px 5px -1px rgba(236,88,78,0.2),0px 5px 8px 0px rgba(236,88,78,0.14),0px 1px 14px 0px rgba(236,88,78,0.12);
}

.c1 .c4 {
  border-color: #ec584e;
}

.c1:hover .c4,
.c1:focus .c4 {
  border-color: #ec584e;
  box-shadow: 0px 3px 5px -1px rgba(236,88,78,0.2),0px 5px 8px 0px rgba(236,88,78,0.14),0px 1px 14px 0px rgba(236,88,78,0.12);
}

.c1 .c2:checked:disabled ~ .c4 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
  role="radiogroup"
>
  <label
    className="c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      type="radio"
      value="Foo"
    />
    <span
      className="c4 c5"
    />
    Foo
  </label>
  <span
    className="c6"
  >
    Error text
  </span>
</div>
`;
